--- a/.gitignore
+++ b/.gitignore
@@ -8,13 +8,11 @@ target/
 .idea/jarRepositories.xml
 .idea/compiler.xml
 .idea/libraries/
-<<<<<<< HEAD
 .idea
-=======
->>>>>>> 43453d8 (save config)
 *.iws
 *.iml
 *.ipr
+target
 
 ### Eclipse ###
 .apt_generated
